# BattleTracker

./: README.md  docker-compose.yml
.github/workflows/: dev-ci.yml
src/Tracker/: Tracker.sln
src/Tracker/Battlelog/: Battlelog.csproj  BattlelogClient.cs
src/Tracker/Battlelog/Models/: Response.cs
src/Tracker/Shared/: GZipWebClient.cs  Shared.csproj  Variables.cs
src/Tracker/Shared/DiscordHelpers/: EmbedExtensions.cs  WebhookModel.cs
src/Tracker/Shared/Enums/: AddStatus.cs  LogType.cs  MatchAudience.cs  MatchType.cs
src/Tracker/Shared/Models/: AuthCode.cs  BattlelogPlayerCountsViewModel.cs  Followed.cs  IngameMetadata.cs  MessageModel.cs  Persona.cs  PersonaInfo.cs  Player.cs  PlayerTracker.cs  Presence.cs  RoundInfo.cs  ServerInfo.cs  Snapshot.cs  TeamInfo.cs  User.cs
src/Tracker/Shared/Redis/: Serialization.cs
src/Tracker/Tracker/: Dockerfile  Dockerfile.original  Program.cs  Startup.cs  Tracker.csproj
src/Tracker/Tracker.DAL/: Tracker.DAL.csproj  TrackerContext.cs
src/Tracker/Tracker.DAL/Models/: TrackerEntry.cs
src/Tracker/Tracker/Controllers/: DiscordController.cs  SoldierController.cs
src/Tracker/Tracker/Properties/: launchSettings.json
src/Tracker/Tracker/Services/: DiscordService.cs  PersonaService.cs
src/Tracker/Tracker/ViewModels/: AddTrackerInput.cs  GetTrackersInput.cs  SoldierInput.cs  (+3 more)
src/discord-integration/: .gitignore  Dockerfile  package-lock.json  package.json
src/discord-integration/src/: index.js
src/rcon-connector/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.debian
src/rcon-connector/src/: logging.rs  main.rs
(+6 files in other folders)
